--- a/Client/src/Components/Styles/BlogList.css
+++ b/Client/src/Components/Styles/BlogList.css
@@ -1,7 +1,16 @@
+.div-contents{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:2vw;
+    
+}
 .blog{
     border-bottom: 2px solid #33333336;
-    padding-bottom: 2vw;
-    margin: 2vw 0;
+    padding: 2vw;
+    border-radius: 0.5vw;
+    box-shadow: 5px 5px #444;  
+    margin: 0.5vw 0;
+    border: 2px solid #333;
 }
 h1{
     text-align: center;
@@ -18,6 +27,7 @@ h2{
 }
 
 .additional-info-div{
+    display: flex;
     margin-top: 1vw;
     font-size: 0.9vw;
     line-height: 1.5;
