--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,5 +1,5 @@
 *{
-  background-color: #ffffff;
+  background-color: rgb(255, 255, 255);
   color: #333333;
   margin: 0;
   font-family: 'Inter', sans-serif;
