--- a/Client/src/Components/Styles/BlogList.css
+++ b/Client/src/Components/Styles/BlogList.css
@@ -1,34 +1,40 @@
-.div-contents{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap:2vw;
-    
+.div-contents {
+    width: 80%;
+    margin:auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2vw;
+  cursor: pointer;
 }
-.blog{
-    border-bottom: 2px solid #33333336;
-    padding: 2vw;
-    border-radius: 0.5vw;
-    box-shadow: 5px 5px #444;  
-    margin: 0.5vw 0;
-    border: 2px solid #333;
+h2,p{
+    background-color: #ddd;
 }
-h1{
-    text-align: center;
-    margin-bottom: 3vw;
-    font-size: 2vw;
+.blog {
+
+  background-color: #ddd;
+  border-bottom: 2px solid #33333336;
+  padding: 2vw;
+  border-radius: 0.5vw;
+  box-shadow: 5px 5px #444;
+  margin: 0.5vw 0;
+  border: 2px solid #333;
 }
-h2{
-    font-size: 1.5vw;
-    margin-bottom: 1vw;
+h1 {
+  text-align: center;
+  margin-bottom: 3vw;
+  font-size: 2vw;
 }
-.content-paragraph{
-    font-size: 1.2vw;
-    line-height: 1.6;
+h2 {
+  font-size: 1.5vw;
+  margin-bottom: 1vw;
+}
+.content-paragraph {
+  font-size: 1.vw;
+  line-height: 1.6;
 }
 
-.additional-info-div{
-    display: flex;
-    margin-top: 1vw;
-    font-size: 0.9vw;
-    line-height: 1.5;
+.additional-info-div {
+  margin-top: 1vw;
+  font-size: 0.9vw;
+  line-height: 1.3;
 }
