--- a/Client/src/Components/Styles/BlogList.css
+++ b/Client/src/Components/Styles/BlogList.css
@@ -1,14 +1,20 @@
 .div-contents {
     width: 80%;
     margin:auto;
-  display: grid;
+
   grid-template-columns: 1fr 1fr;
   gap: 2vw;
   cursor: pointer;
 }
-h2,p{
-    background-color: #ddd;
+.blog-name{
+  cursor: pointer;
+  transition: transform 0.3s ease;
 }
+
+.blog-name:hover{
+  transform: scale(1.1);
+}
+
 .blog {
 
   background-color: #ddd;
