--- a/Client/src/Components/Styles/BlogDetail.css
+++ b/Client/src/Components/Styles/BlogDetail.css
@@ -1,5 +1,69 @@
-.detail-content{
-    width: 80%;
-    margin: auto;
-}
+body {
+    font-family: 'Roboto', sans-serif; 
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f9; 
+  }
+  .detail-content {
+    max-width: 800px;
+    margin: 30px auto;
+    padding: 20px;
+    background-color: #fff; 
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+    border-radius: 8px; 
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  
+  .detail-content:hover {
+    transform: scale(1.02);
+  }
+  
+  .detail-content h1 {
+    font-size: 32px;
+    color: #256628; 
+    border-bottom: 2px solid #4caf50;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .detail-hero-content {
+    margin-bottom: 20px;
+  }
+  
+  .detail-hero-content h3 {
+    font-size: 24px;
+    color: #4caf50; 
+    margin-bottom: 10px;
+  }
+  
+  .detail-hero-content p {
+    font-size: 18px;
+    color: #555;
+    line-height: 1.6; 
+  }
+  
+  .detail-hero-content ul {
+    padding-left: 20px;
+    margin-bottom: 20px;
+    list-style-type: decimal; 
+  }
+  
+  .detail-hero-content li {
+    margin-bottom: 10px;
+    font-size: 18px;
+    color: #555;
+    line-height: 1.6;
+  }
 
+  .additional-info-div {
+    margin-top: 30px;
+    padding-top: 20px;
+    border-top: 1px solid #ddd; 
+  }
+  
+  .additional-info-div p {
+    font-size: 16px;
+    color: #888; 
+  }
+  
