--- a/Client/src/Components/Styles/Navbar.css
+++ b/Client/src/Components/Styles/Navbar.css
@@ -1,34 +1,53 @@
 
-.navbar{
-    margin: 2vw;
-    padding: 1vw;
+body {
+    font-family: 'Roboto', sans-serif; 
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f9; 
+  }
+.navbar {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    font-size: 1.1vw;
-    border-bottom: 2px solid #5f99be;
-
-    
-}
-.active{
-    color:#5f99be;
-}
-.nav-links{
-    display: flex;
-    transition: color 0.3s ease;
-}
-
-.company-logo{
-    font-size:1.7vw;
-    color: #5f99be;
-    cursor: pointer;
+    align-items: center;
+    background: linear-gradient(to right, rgb(224, 247, 190),#2e7d32);
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .company-logo {
+    font-size: 24px;
+    font-family:  cursive;
+    color: #2e7d32;
     font-weight: bold;
-}
-
-a{
-    text-decoration: none;
-    padding-right: 3vw;
-}
-li{
+    
+  }
+  
+  .nav-links-div {
+    display: flex;
+  }
+  
+  .nav-links {
     list-style: none;
-}
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .nav-link {
+    font-size: 18px;
+    font-weight: 500;
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease, border-bottom 0.3s ease;
+    padding-bottom: 3px; 
+  }
+  .nav-link:hover {
+    color: #a5d6a7; 
+        border-bottom: 2px solid #4caf50; 
+  }
+  
+  .nav-link.active {
+    color: #e3f3e4; 
+    border-bottom: 2px solid #4caf50; 
+  }
